# transcription-benchmarks

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  free_space.sh  pyproject.toml  ruff.toml
.devcontainer/: devcontainer.json
.github/workflows/: test.yml  update-precommit.yml
app_types/: bench.py  models.py  util.py
benchmark/: bench.py  types.py
misc/: get_test_audio.py  models.py  setup_logging.py
models/: .gitignore
models/faster-whisper-large-v3-turbo-ct2/: .gitignore
scripts/: deploy.py  download.py  predict.py
src/transcription_benchmarks/: __init__.py
src/transcription_benchmarks/app_types/: bench.py  models.py  util.py
src/transcription_benchmarks/benchmark/: .gitignore  bench.py
src/transcription_benchmarks/inference/distil_whisper_distil_large_v3/: inference.py
src/transcription_benchmarks/inference/openai-whisper-large-v3/: inference.py
src/transcription_benchmarks/inference/openai_whisper_large_v3_turbo/: inference.py
src/transcription_benchmarks/inference/systran_faster_whisper_large_v2/: inference.py  requirements.txt
src/transcription_benchmarks/misc/: get_test_audio.py
src/transcription_benchmarks/util/: deploy.py  download.py  gpu.py  predict.py
test_audio/: .gitignore  10min.flac  1hour.flac  1min.flac  chinese.flac  chinese_song.flac  hokkien.flac  readme.md  short.flac
tests/: test_bench.py  test_bench_cli.py  test_bench_gpu.py  test_bench_validate_args.py  test_endpoints.py
tests/assets/: english.json
tests/systran_faster_whisper_large_v2/: test_inference.py  test_inference_pydantic.py
util/: download.py
