[project]
name = "transcription-benchmarks"
version = "0.1.0"
description = "Testing ground for whisper on sagemaker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "brotli>=1.1.0",
    "faster-whisper>=1.0.3",
    "multi-model-server>=1.1.11",
    "python-utils",
    "sagemaker[local]>=2.232.1",
    "torch>=2.5.0",
    "torchaudio>=2.5.0",
    "torchvision>=0.20.0",
    "transformers>=4.37.0",
    "typed-ffmpeg>=2.0.0",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.8.0",
    "ipykernel>=6.29.5",
    "pyright>=1.1.382.post0",
    "ruff>=0.6.8",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "boto3-stubs[sagemaker]>=1.35.41",
]
package = true

[tool.uv.sources]
faster-whisper = { git = "https://github.com/SYSTRAN/faster-whisper.git" }
python-utils = { git = "https://github.com/extrange/python-utils" }

[tool.pyright]
# pre-commit: make pyright use the venv
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
# https://docs.pytest.org/en/latest/explanation/goodpractices.html#which-import-mode
addopts = ["--import-mode=importlib"]
